# smallpaste

./: Cargo.toml  README.md
example/: config.yml
src/: lib.rs  main.rs
