[package]
name = "smallpaste"
version = "0.1.0"
authors = ["Kushal Das <mail@kushaldas.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
dirs = "2.0.2"
clap = "2.33.1"
rand = "0.7.3"
clipboard = "0.5.0"
